--- a/page1.html
+++ b/page1.html
@@ -44,7 +44,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RTGEDrQVJRyXc8CB/+l6GWoOFADJkyu4W+ZX5R95f0TVf+eSbRmlyo08ypS9BD14ognJq5yKX37q9dOABSQ2k82/aUEgJW7AdsfGFRhzbtye35jVCfNhhKWcRlploxgk">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UsVCkvoj73uvPI+gwEeTlF3lNSOd1hr0eK+ani3ukYF3ZXdtPv6E56a3OVBLIFzCFbQ2tmlSBo2EUo4bfTkvAAaawoNYgbNMM4HqzVAd6R4zbGZIzGsi6LriXPwjeBcj">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -78,7 +78,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/d">web maker</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
